Cambiar apps por riesgos en el perfil

--- a/AppRiesgosPersonales/app/src/main/res/values/strings.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/strings.xml
@@ -11,19 +11,19 @@
     <string name="loadCorrect">Se han cargado %d elementos</string>
     <string name="loadError">Ha ocurrido un error al acceder a los datos</string>
 
-    <string name="app_detail_riesgos_title">Riesgos</string>
+    <string name="dElement_detail_riesgos_title">Riesgos</string>
     <string name="riesgos_detail_controles_title">Controles para mitigarlo</string>
     <string name="controles_detail_riesgos_title">Riesgos que mitiga</string>
 
-    <string name="app_detail_add">Añadir</string>
-    <string name="app_detail_remove">Eliminar</string>
+    <string name="dElement_detail_add">Añadir</string>
+    <string name="dElement_detail_remove">Eliminar</string>
 
-    <string name="perfil_tabApps">Apps usadas</string>
+    <string name="perfil_tabRiesgos">Riesgos actuales</string>
     <string name="perfil_tabControles">Controles aplicados</string>
 
     <string name="nivelRiesgoAlto">Riesgo alto</string>
     <string name="nivelRiesgoMedio">Riesgo medio</string>
     <string name="nivelRiesgoBajo">Riesgo bajo</string>
-    <string name="appAdded">Añadida</string>
+    <string name="dElementAdded">Añadida</string>
     <string name="controlAdded">Aplicado</string>
 </resources>
