Añadir separaciones entre Apps y Dispositivos
Se ha modificado el servicio y la aplicacion para que en los catalogos de elementos, riesgos
y controles se pueda separar entre apps y dispositivos.

--- a/AppRiesgosPersonales/app/src/main/res/values/strings.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="nivelRiesgoBajo">Riesgo bajo</string>
     <string name="dElementAdded">Añadida</string>
     <string name="controlAdded">Aplicado</string>
+    <string name="riesgos_tabApps">Apps</string>
+    <string name="riesgos_tabDevices">Dispositivos IoT</string>
 </resources>
