Implementar Tabs en la vista detalle dispositivo

--- a/AppRiesgosPersonales/app/src/main/res/values/strings.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/strings.xml
@@ -66,5 +66,7 @@
         5. <b>COMPLETO:</b> Esto significa que el impacto es total y puede tener consecuencias catastróficas.
     ]]>
     </string>
+    <string name="assetDetail_tabCves">Vulnerabilidades</string>
+    <string name="assetDetail_tabSostenibilidad">Sostenibilidad</string>
 
 </resources>
