--- a/AppRiesgosPersonales/app/src/main/res/values/strings.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/strings.xml
@@ -68,22 +68,32 @@
     </string>
     <string name="assetDetail_tabCves">Vulnerabilidades</string>
     <string name="assetDetail_tabSostenibilidad">Sostenibilidad</string>
+
     <string name="eco_ecoRate_title">Puntuación ECO</string>
     <string name="activo_eco_title">Sostenibilidad ambiental</string>
+
     <string name="activo_durabilidad_title">Durabilidad</string>
     <string name="activo_reparabilidad_title">Reparabilidad</string>
     <string name="activo_reciclabilidad_title">Reciclabilidad</string>
     <string name="activo_efClimatica_title">Eficiencia climática</string>
     <string name="activo_efRecursos_title">Eficiencia en uso de recursos</string>
+
     <string name="eco_rating_title">Calificación ecológica</string>
     <string name="security_title">Puntuación de seguridad</string>
-    <string name="seguridad_0">INSEGURO</string>
-    <string name="seguridad_1">MEJORABLE</string>
-    <string name="seguridad_2">BUENO</string>
-    <string name="seguridad_3">EXCELENTE</string>
-    <string name="eco_0">POBRE</string>
-    <string name="eco_1">JUSTO</string>
-    <string name="eco_2">BUENO</string>
-    <string name="eco_3">EXCELENTE</string>
+
+    <string name="seguridad_0">Inseguro</string>
+    <string name="seguridad_1">Poco seguro</string>
+    <string name="seguridad_2">Suficiente seguro</string>
+    <string name="seguridad_3">Bastante seguro</string>
+
+    <string name="eco_0">Insostenible</string>
+    <string name="eco_1">Poco sostenible</string>
+    <string name="eco_2">Suficiente sostenible</string>
+    <string name="eco_3">Bastante sostenible</string>
+
+    <string name="tramo_0">POBRE</string>
+    <string name="tramo_1">JUSTO</string>
+    <string name="tramo_2">BUENO</string>
+    <string name="tramo_3">EXCELENTE</string>
 
 </resources>
