--- a/AppRiesgosPersonales/app/src/main/res/values/strings.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/strings.xml
@@ -82,12 +82,12 @@
     <string name="eco_rating_title">Calificación ecológica</string>
     <string name="security_title">Puntuación de seguridad</string>
 
-    <string name="seguridad_0">Inseguro</string>
+    <string name="seguridad_0">Muy poco seguro</string>
     <string name="seguridad_1">Poco seguro</string>
     <string name="seguridad_2">Suficiente seguro</string>
     <string name="seguridad_3">Bastante seguro</string>
 
-    <string name="eco_0">Insostenible</string>
+    <string name="eco_0">Muy poco sostenible</string>
     <string name="eco_1">Poco sostenible</string>
     <string name="eco_2">Suficiente sostenible</string>
     <string name="eco_3">Bastante sostenible</string>
