--- a/CIBELAndroid/app/src/main/res/values/strings.xml
+++ b/CIBELAndroid/app/src/main/res/values/strings.xml
@@ -2,49 +2,35 @@
     <string name="app_name">CIBEL</string>
 
     <string name="bottom_nav_home">HOME</string>
-    <string name="bottom_nav_riesgos">AMENAZAS</string>
-    <string name="bottom_nav_controles">BUENAS PRÁCTICAS</string>
     <string name="bottom_nav_perfil">PERFIL</string>
-    <string name="bottom_nav_smart_home">SMART HOME</string>
 
     <string name="search_hint">Buscar dispositivos</string>
 
     <string name="loadCorrect">Se han cargado %d dispositivos</string>
     <string name="loadError">Ha ocurrido un error al acceder a los datos</string>
 
-    <string name="dElement_detail_riesgos_title">Buenas prácticas</string>
-    <string name="riesgos_detail_controles_title">Buenas prácticas para mitigarlo</string>
-    <string name="controles_detail_riesgos_title">Amenazas que mitiga</string>
-    <string name="asset_detail_cves_title">Vulnerabilidades</string>
-
     <string name="dElement_detail_add">Añadir</string>
     <string name="dElement_detail_remove">Eliminar</string>
 
-    <string name="perfil_tabRiesgos">Amenazas actuales</string>
-    <string name="perfil_tabActivos">Smart Home</string>
-    <string name="perfil_tabControles">Buenas prácticas</string>
-    <string name="perfil_numDispositivos">Nº dispositivos</string>
-    <string name="perfil_numVulnerabilidades">Nº vulnerabilidades</string>
     <string name="perfil_severity">Gravedad de los fallos de seguridad</string>
 
-    <string name="nivelRiesgoAlto">Riesgo alto</string>
-    <string name="nivelRiesgoMedio">Riesgo medio</string>
-    <string name="nivelRiesgoBajo">Riesgo bajo</string>
-    <string name="dElementAdded">Añadido</string>
-    <string name="controlAdded">Aplicado</string>
-    <string name="riesgos_tabApps">Apps</string>
-    <string name="riesgos_tabDevices">Dispositivos IoT</string>
-
-    <string name="severity_low">LOW</string>
-    <string name="severity_medium">MEDIUM</string>
-    <string name="severity_high">HIGH</string>
-    <string name="severity_critical">CRITICAL</string>
+    <string name="severity_low">BAJO</string>
+    <string name="severity_medium">MEDIO</string>
+    <string name="severity_high">ALTO</string>
+    <string name="severity_critical">CRÍTICO</string>
 
     <string name="cve_baseScore_title">Gravedad</string>
     <string name="cve_confidencialidad_title">Confidencialidad</string>
     <string name="cve_integridad_title">Integridad</string>
     <string name="cve_disponibilidad_title">Disponibilidad</string>
     <string name="cve_impacto_title">Impacto</string>
+
+    <string name="cve_impact_n">NINGUNO</string>
+    <string name="cve_impact_l">BAJO</string>
+    <string name="cve_impact_p">PARCIAL</string>
+    <string name="cve_impact_h">ALTO</string>
+    <string name="cve_impact_c">COMPLETO</string>
+
     <string name="cve_info_impacto">
     <![CDATA[
         <b>1. Confidencialidad:</b><br>
@@ -69,9 +55,6 @@
     </string>
     <string name="assetDetail_tabCves">Seguridad</string>
     <string name="assetDetail_tabSostenibilidad">Sostenibilidad</string>
-
-    <string name="eco_ecoRate_title">Puntuación ECO</string>
-    <string name="activo_eco_title">Sostenibilidad ambiental</string>
 
     <string name="activo_durabilidad_title">Durabilidad</string>
     <string name="activo_reparabilidad_title">Reparabilidad</string>
@@ -107,6 +90,5 @@
     <string name="ordenarGravedad_Desc">Mayor a menor gravedad</string>
 
     <string name="vacio"></string>
-
 
 </resources>
