Añadir capturas de la interfaz en inglés

--- a/CIBELAndroid/app/src/main/res/values-en/strings.xml
+++ b/CIBELAndroid/app/src/main/res/values-en/strings.xml
@@ -90,5 +90,7 @@
     <string name="ordenarGravedad_Desc">High to low severity</string>
 
     <string name="vacio"></string>
+    <string name="cve_impact_info">Impact Information</string>
+    <string name="entendido">Understood</string>
 
 </resources>
